# tidy_tuesday_python

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
college_major_15_10_2018/: college_majors.ipynb
notebooks/: r_downloads.ipynb  women-workplace.ipynb  womens-world-cup.ipynb
