[tool.poetry]
name = "tidy_tuesday_python"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.2.1"
numpy = "^1.20.0"
scipy = "^1.6.0"
seaborn = "^0.11.1"
matplotlib = "^3.3.4"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
